yml/tekton-el-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  tls:
  - secretName: webhook-tls
    hosts:
    - {cicdWebhook}
  rules:
  - host: {cicdWebhook}
    http:
      paths:
      - path: /cd
        backend:
          serviceName: el-conexp-listener
          servicePort: 8080
